--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,11 @@
         <activity android:name=".activity.PlayerListActivity" />
         <activity android:name=".activity.PlayerActivity" />
         <activity android:name=".activity.ConferenceActivity" />
+        <activity android:name=".activity.TeamActivity" />
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET"
+    <uses-permission
+        android:name="android.permission.INTERNET"
         tools:ignore="ManifestOrder" />
 
 </manifest>
