--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,24 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
+            android:configChanges="uiMode"
             android:exported="true"
-            android:theme="@style/Theme.NBATracker"
-            android:configChanges="uiMode">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.NBATracker">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.PlayerListActivity" />
-        <activity android:name=".activity.PlayerActivity" />
-        <activity android:name=".activity.ConferenceActivity" />
-        <activity android:name=".activity.TeamActivity" />
+        <activity
+            android:name=".activity.PlayerListActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.ConferenceActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.TeamActivity"
+            android:screenOrientation="portrait" />
     </application>
 
     <uses-permission
